force-app/main/default/objects/Community_Giving__c/fields/Org_Corporate_Cont_Grants_Fees__c.field-meta.xml
<CustomField>
    <fullName>Org_Corporate_Cont_Grants_Fees__c</fullName>
    <label>Org Corporate Cont/Grants/Fees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>