force-app/main/default/objects/Community_Giving__c/fields/Org_Earned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Org_Earned_Revenue__c</fullName>
    <label>Org Earned Revenue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>