force-app/main/default/objects/Community_Giving__c/fields/Org_Government_Contracts_Grants__c.field-meta.xml
<CustomField>
    <fullName>Org_Government_Contracts_Grants__c</fullName>
    <label>Org Government Contracts/Grants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>