force-app/main/default/objects/Community_Giving__c/fields/Org_Investment_Interest_Tax_Rev__c.field-meta.xml
<CustomField>
    <fullName>Org_Investment_Interest_Tax_Rev__c</fullName>
    <label>Org Investment Interest/Tax Rev</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>