force-app/main/default/objects/Community_Giving__c/fields/Org_Other__c.field-meta.xml
<CustomField>
    <fullName>Org_Other__c</fullName>
    <label>Org Other</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>