force-app/main/default/objects/Community_Giving__c/fields/Org_United_Way__c.field-meta.xml
<CustomField>
    <fullName>Org_United_Way__c</fullName>
    <label>Org United Way</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>