force-app/main/default/objects/Community_Giving__c/fields/Organization_Contact__c.field-meta.xml
<CustomField>
    <fullName>Organization_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Contact</label>
    <referenceTo>Organization_Contact__c</referenceTo>
    <relationshipName>Community_Givings</relationshipName>
    <type>Lookup</type>
</CustomField>