force-app/main/default/objects/Community_Giving__c/fields/Organization_Program__c.field-meta.xml
<CustomField>
    <fullName>Organization_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization/Program</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>