force-app/main/default/objects/Community_Giving__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>