force-app/main/default/objects/Community_Giving__c/fields/Outcomes_directly_attributed_to_grant__c.field-meta.xml
<CustomField>
    <fullName>Outcomes_directly_attributed_to_grant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outcomes directly attributed to grant</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>