force-app/main/default/objects/Community_Giving__c/fields/Partnership_Description__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Including any Assets Provided and the Number of Impressions.</inlineHelpText>
    <label>Partnership Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>