force-app/main/default/objects/Community_Giving__c/fields/Primary_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Primary_Beneficiary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Beneficiary</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>