force-app/main/default/objects/Community_Giving__c/fields/Primary_County_Served__c.field-meta.xml
<CustomField>
    <fullName>Primary_County_Served__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary County Served</label>
    <length>120</length>
    <type>Text</type>
</CustomField>