force-app/main/default/objects/Community_Giving__c/fields/Program_Corporate_Cont_Grants_Fees__c.field-meta.xml
<CustomField>
    <fullName>Program_Corporate_Cont_Grants_Fees__c</fullName>
    <label>Program Corporate Cont/Grants/Fees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>