force-app/main/default/objects/Community_Giving__c/fields/Program_Earned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Program_Earned_Revenue__c</fullName>
    <label>Program Earned Revenue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>