force-app/main/default/objects/Community_Giving__c/fields/Program_Membership_Dues_Fees__c.field-meta.xml
<CustomField>
    <fullName>Program_Membership_Dues_Fees__c</fullName>
    <label>Program Membership Dues/Fees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>