force-app/main/default/objects/Community_Giving__c/fields/Program_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Program_Objectives__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>