force-app/main/default/objects/Community_Giving__c/fields/Program_Other__c.field-meta.xml
<CustomField>
    <fullName>Program_Other__c</fullName>
    <label>Program Other</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>