force-app/main/default/objects/Community_Giving__c/fields/Program_United_Way__c.field-meta.xml
<CustomField>
    <fullName>Program_United_Way__c</fullName>
    <label>Program United Way</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>