force-app/main/default/objects/Community_Giving__c/fields/Progress_Report_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_Report_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Progress Report Received Date</label>
    <type>Date</type>
</CustomField>