force-app/main/default/objects/Community_Giving__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purpose</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>