force-app/main/default/objects/Community_Giving__c/fields/Reason_to_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Decline__c</fullName>
    <label>Reason to Decline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient or Ineligible CRA Data</fullName>
            </value>
            <value>
                <fullName>Otherwise Ineligible</fullName>
            </value>
            <value>
                <fullName>Outside of Footprint</fullName>
            </value>
            <value>
                <fullName>Weak Alignment with Grant Program Goals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>