force-app/main/default/objects/Community_Giving__c/fields/Reason_to_Decline_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Decline_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason to Decline Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>