force-app/main/default/objects/Community_Giving__c/fields/Reasons_outcomes_fell_short_of_expected__c.field-meta.xml
<CustomField>
    <fullName>Reasons_outcomes_fell_short_of_expected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reasons outcomes fell short of expected</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>