force-app/main/default/objects/Community_Giving__c/fields/Receipt_Received__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Received</label>
    <type>Date</type>
</CustomField>