force-app/main/default/objects/Community_Giving__c/fields/Request_Multi_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Multi_Year_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Multi-Year End Date</label>
    <type>Date</type>
</CustomField>