force-app/main/default/objects/Community_Giving__c/fields/Request_Title__c.field-meta.xml
<CustomField>
    <fullName>Request_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of program seeking support</inlineHelpText>
    <label>Request Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>