force-app/main/default/objects/Community_Giving__c/fields/Requesting_Org_s_Board_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Org_s_Board_of_Directors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requesting Org’s Board of Directors</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>