force-app/main/default/objects/Community_Giving__c/fields/Reviewed_by_FIC__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_FIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reviewed by FIC</label>
    <type>Date</type>
</CustomField>