force-app/main/default/objects/Community_Giving__c/fields/Reviewed_by_FIC_Audit2__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_FIC_Audit2__c</fullName>
    <description>Records the date that the &quot;Reviewed by FIC&quot; field was changed, and who changed the value.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Records the date that the &quot;Reviewed by FIC&quot; field was changed, and who changed the value.</inlineHelpText>
    <label>Reviewed by FIC Audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>