force-app/main/default/objects/Community_Giving__c/fields/Reviewed_by_FIC_Audit__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_FIC_Audit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Records the date that the &quot;Reviewed by FIC&quot; field was changed.</inlineHelpText>
    <label>Reviewed by FIC Audit</label>
    <type>Date</type>
</CustomField>