force-app/main/default/objects/Community_Giving__c/fields/Reviewed_by_FIC_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_FIC_Disposition__c</fullName>
    <inlineHelpText>FIC ($10,000+)</inlineHelpText>
    <label>Reviewed by FIC Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>