force-app/main/default/objects/Community_Giving__c/fields/Reviewed_by_MCIC__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_MCIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reviewed by MCIC/CM</label>
    <type>Date</type>
</CustomField>