force-app/main/default/objects/Community_Giving__c/fields/Reviewed_by_MCIC_Decision__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_MCIC_Decision__c</fullName>
    <inlineHelpText>by MCIC ($501-$9,999)</inlineHelpText>
    <label>Reviewed by MCIC Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>