force-app/main/default/objects/Community_Giving__c/fields/Reviewed_outside_of_MCIC__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_outside_of_MCIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reviewed outside of MCIC</label>
    <type>Date</type>
</CustomField>