force-app/main/default/objects/Community_Giving__c/fields/Reviewed_outside_of_MCIC_Audit__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_outside_of_MCIC_Audit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Records the date that the &quot;Reviewed outside of MCIC&quot; field was changed.</inlineHelpText>
    <label>Reviewed outside of MCIC Audit</label>
    <type>Date</type>
</CustomField>