force-app/main/default/objects/Community_Giving__c/fields/Reviewed_outside_of_MCIC_Decision__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_outside_of_MCIC_Decision__c</fullName>
    <inlineHelpText>Review outside of MCIC Decision is up to $500</inlineHelpText>
    <label>Reviewed outside of MCIC Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>