force-app/main/default/objects/Community_Giving__c/fields/Secondary_County_Served__c.field-meta.xml
<CustomField>
    <fullName>Secondary_County_Served__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary County Served</label>
    <length>120</length>
    <type>Text</type>
</CustomField>