force-app/main/default/objects/Community_Giving__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <description>Date the grant recipient signed the Grant Survey response form.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>