force-app/main/default/objects/Community_Giving__c/fields/Small_Businesses_Assisted__c.field-meta.xml
<CustomField>
    <fullName>Small_Businesses_Assisted__c</fullName>
    <label># Small Businesses Assisted</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>