force-app/main/default/objects/Community_Giving__c/fields/Small_Businesses_Assisted_AI__c.field-meta.xml
<CustomField>
    <fullName>Small_Businesses_Assisted_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Small Businesses Assisted</label>
    <length>5</length>
    <type>Text</type>
</CustomField>