force-app/main/default/objects/Community_Giving__c/fields/Social_Media_Info__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Media Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>