force-app/main/default/objects/Community_Giving__c/fields/Spend_Plan_Received__c.field-meta.xml
<CustomField>
    <fullName>Spend_Plan_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Market Decisions Received</label>
    <type>Date</type>
</CustomField>