force-app/main/default/objects/Community_Giving__c/fields/Status_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Status_Picklist__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Market Approve</fullName>
            </value>
            <value>
                <fullName>Market Decline</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>