force-app/main/default/objects/Community_Giving__c/fields/Strategy_Description__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy to Achieve Outcomes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>