force-app/main/default/objects/Community_Giving__c/fields/Success_Story_or_Anecdote__c.field-meta.xml
<CustomField>
    <fullName>Success_Story_or_Anecdote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Success Story or Anecdote</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>