force-app/main/default/objects/Community_Giving__c/fields/Support_History__c.field-meta.xml
<CustomField>
    <fullName>Support_History__c</fullName>
    <description>If applicable, list any support FNB has provided to requesting organization prior to 2016.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Support History</label>
    <type>TextArea</type>
</CustomField>