force-app/main/default/objects/Community_Giving__c/fields/Survey_Email_notification__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Email notification</label>
    <type>Checkbox</type>
</CustomField>