force-app/main/default/objects/Community_Giving__c/fields/Sustainability_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sustainability Plan</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>