force-app/main/default/objects/Community_Giving__c/fields/Total_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Amount__c</fullName>
    <label>Total Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>