force-app/main/default/objects/Community_Giving__c/fields/Total_Multi_Year_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Total_Multi_Year_Commitments__c</fullName>
    <label>Total Multi Year Commitments</label>
    <summaryForeignKey>Commitment__c.Community_Investment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>