force-app/main/default/objects/Community_Giving__c/fields/Total_Recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Recommended_Amount__c</fullName>
    <label>Total Recommended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>