force-app/main/default/objects/Community_Giving__c/fields/Underwriting_Approved_by_CD_and_CRA__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Approved_by_CD_and_CRA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Approved by CD and CRA</label>
    <type>Date</type>
</CustomField>