force-app/main/default/objects/Community_Giving__c/fields/Underwriting_Approved_by_CD_CRA_Audit__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Approved_by_CD_CRA_Audit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Approved by CD &amp; CRA Audit</label>
    <length>121</length>
    <type>Text</type>
</CustomField>