force-app/main/default/objects/Community_Giving__c/fields/Underwriting_Completed__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Completed</label>
    <type>Date</type>
</CustomField>