force-app/main/default/objects/Community_Giving__c/fields/Vetted_by_CD__c.field-meta.xml
<CustomField>
    <fullName>Vetted_by_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CD Review</label>
    <type>Date</type>
</CustomField>