force-app/main/default/objects/Community_Giving__c/fields/Volunteer_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Opportunities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Volunteer Opportunities</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>