force-app/main/default/objects/Community_Giving__c/fields/Workshops_Training_Events_Provided__c.field-meta.xml
<CustomField>
    <fullName>Workshops_Training_Events_Provided__c</fullName>
    <label># Workshops/Training Events Provided</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>