force-app/main/default/objects/Community_Giving__c/fields/Workshops_Training_Events_Provided_AI__c.field-meta.xml
<CustomField>
    <fullName>Workshops_Training_Events_Provided_AI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># Workshops/Training Events Provided</label>
    <length>8</length>
    <type>Text</type>
</CustomField>