force-app/main/default/objects/Community_Giving__c/fields/X2_c__c.field-meta.xml
<CustomField>
    <fullName>X2_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number in 2c in 2a or 2b?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>