force-app/main/default/objects/Community_Giving__c/fields/X80_MFI__c.field-meta.xml
<CustomField>
    <fullName>X80_MFI__c</fullName>
    <label>80% MFI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>