force-app/main/default/objects/Community_Giving__c/fields/Youth_Provided_Voc_Train_Work_Dev__c.field-meta.xml
<CustomField>
    <fullName>Youth_Provided_Voc_Train_Work_Dev__c</fullName>
    <label># Youth Provided Voc Train/Work Dev</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>