force-app/main/default/objects/Community_Giving__c/fields/Youth_Provided_Voc_Train_Work_Dev_AI__c.field-meta.xml
<CustomField>
    <fullName>Youth_Provided_Voc_Train_Work_Dev_AI__c</fullName>
    <description>Actual Impacts-- Educated Workforce:  Number of Youth provided Vocational / Workforce Development Training.</description>
    <encryptionScheme>None</encryptionScheme>
    <label># Youth Provided Voc Train/Work Dev</label>
    <length>8</length>
    <type>Text</type>
</CustomField>