force-app/main/default/objects/Community_Giving__c/fields/Youth_Provided_Work_Career_Educ__c.field-meta.xml
<CustomField>
    <fullName>Youth_Provided_Work_Career_Educ__c</fullName>
    <label># Youth Provided Work/Career Educ</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>