force-app/main/default/objects/Community_Giving__c/fields/Youth_Provided_Work_Career_Educ_AI__c.field-meta.xml
<CustomField>
    <fullName>Youth_Provided_Work_Career_Educ_AI__c</fullName>
    <description>Actual Impacts-- Educated Workforce:  Number of youth provided workforce/career education</description>
    <encryptionScheme>None</encryptionScheme>
    <label># Youth Provided Work/Career Educ</label>
    <length>8</length>
    <type>Text</type>
</CustomField>