force-app/main/default/objects/Community_Giving__c/recordTypes/Community_Development_Grant.recordType-meta.xml
<RecordType>
    <fullName>Community_Development_Grant</fullName>
    <active>true</active>
    <label>Community Development Grant</label>
</RecordType>