force-app/main/default/objects/Community_Giving__c/recordTypes/Community_Development_Investment.recordType-meta.xml
<RecordType>
    <fullName>Community_Development_Investment</fullName>
    <active>true</active>
    <label>Community Development Investment</label>
</RecordType>