force-app/main/default/objects/Community_Giving__c/recordTypes/Flood_Relief.recordType-meta.xml
<RecordType>
    <fullName>Flood_Relief</fullName>
    <active>true</active>
    <description>For site created to accept applications for Flood Relief</description>
    <label>Flood Relief</label>
</RecordType>