force-app/main/default/objects/Community_Giving__c/recordTypes/Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship</fullName>
    <active>true</active>
    <label>Sponsorship</label>
</RecordType>